# ComputerVisionLabs

./: .gitignore
lab1/: task2.cpp  task4.cpp  task5.cpp  task6.cpp  test.cpp
lab1 - Intro OpenCV pix manipulation transformations/: task1.cpp  task3.cpp
lab2/: image_filter.cpp  image_filter.h  task2-6.cpp
lab2 - Filters and histogram equalization/: task1.cpp
lab3/: task2.cpp  task3.cpp  task4.cpp  task5.cpp
lab3 - Mouse callback and color segmentation/: task1.cpp
lab4/: task2.cpp  task4.cpp
lab4 - Edge and line detection/: hughLinesTester.cpp  task1.cpp  task2.cpp  task3.cpp
lab7/: CMakeLists.txt  main.cpp  main2.cpp
lab7 - Image stitching/include/: main_utils.h
lab7 - Image stitching/src/: panoramic_utils.cpp
lab7/PanoramicUtils/: panoramic_utils.cpp
lab7/src/: main.cpp  main_utils.cpp
lab8/: CMakeLists.txt
lab8 - Camera calibration/src/: main.cpp
lab8/include/: main_utils.h
lab8/src/: main.cpp  main_utils.cpp
